--- a/responsive/layout2.html
+++ b/responsive/layout2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
     <title>Document</title>
     <style>
         body { background: #b71c1c; color: #fff; }
